<resources>
    <string name="app_name">Pokemon</string>
    <string name="pokemon_search">Find your Pokemon</string>
    <string name="pokemon_image">pokemon_image</string>
    <string name="base_stats">Base stats</string>
    <string name="search_pokemon">Search Pokemon</string>
    <string name="random_pokemon">Random Pokemon</string>
    <string name="empty_view_text">Seems you haven\'t favourite pokemons</string>
    <string name="image_icon">image_icon</string>
    <string name="stat_hp">HP</string>
    <string name="stat_attack">ATK</string>
    <string name="stat_defence">DEF</string>
    <string name="stat_speed">SPD</string>
    <string name="delete_pokemon">Delete pokemon</string>
    <string name="add_pokemon">Add pokemon</string>
</resources>